enable the jemallocator dependencies only when we are running on linux

--- a/helpers/Cargo.toml
+++ b/helpers/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 anyhow = "1.0.38"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 heed = "0.10.6"
-jemallocator = "0.3.2"
 milli = { path = "../milli" }
 stderrlog = "0.5.1"
 structopt = { version = "0.3.21", default-features = false }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+jemallocator = "0.3.2"
