--- a/infos/Cargo.toml
+++ b/infos/Cargo.toml
@@ -9,9 +9,11 @@ anyhow = "1.0.38"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 csv = "1.1.5"
 heed = "0.10.6"
-jemallocator = "0.3.2"
 milli = { path = "../milli" }
 roaring = "0.6.6"
 serde_json = "1.0.62"
 stderrlog = "0.5.1"
 structopt = { version = "0.3.21", default-features = false }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+jemallocator = "0.3.2"
