--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 anyhow = "1.0.38"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 heed = "0.10.6"
-jemallocator = "0.3.2"
 log = "0.4.14"
 milli = { path = "../milli" }
 serde_json = "1.0.62"
 stderrlog = "0.5.1"
 structopt = { version = "0.3.21", default-features = false }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+jemallocator = "0.3.2"
