--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -53,6 +53,7 @@ meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", 
 memmap = "0.7.0"
 milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.6.0" }
 mime = "0.3.16"
+num_cpus = "1.13.0"
 once_cell = "1.5.2"
 oxidized-json-checker = "0.3.2"
 parking_lot = "0.11.1"
