--- a/helpers/Cargo.toml
+++ b/helpers/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
-heed = "0.10.6"
+heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.0" }
 milli = { path = "../milli" }
 stderrlog = "0.5.1"
 structopt = { version = "0.3.21", default-features = false }
