--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -76,7 +76,7 @@ walkdir = "2.3.2"
 obkv = "0.1.1"
 pin-project = "1.0.7"
 whoami = { version = "1.1.2", optional = true }
-reqwest = { version = "0.11.3", features = ["json"], optional = true }
+reqwest = { version = "0.11.3", features = ["json", "rustls-tls"], default-features = false, optional = true }
 
 [dependencies.sentry]
 default-features = false
