--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       dataset_name:
-        description: 'The name of the dataset used to benchmark (songs or wiki)'
+        description: 'The name of the dataset used to benchmark (songs, wiki or indexing)'
         required: false
         default: 'songs'
 
