--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       dataset_name:
-        description: 'The name of the dataset used to benchmark (songs, wiki or indexing)'
+        description: 'The name of the dataset used to benchmark (search_songs, search_wiki or indexing)'
         required: false
-        default: 'songs'
+        default: 'search_songs'
 
 env:
   HOME: "/home/runner" # The actions-rs/toolchain@v1 can fail we have no $HOME defined
