--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -22,11 +22,11 @@ convert_case = "0.4"
 reqwest = { version = "0.11.3", features = ["blocking", "rustls-tls"], default-features = false }
 
 [[bench]]
-name = "songs"
+name = "search_songs"
 harness = false
 
 [[bench]]
-name = "wiki"
+name = "search_wiki"
 harness = false
 
 [[bench]]
