--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -55,7 +55,6 @@ milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.8.0" }
 mime = "0.3.16"
 num_cpus = "1.13.0"
 once_cell = "1.5.2"
-oxidized-json-checker = "0.3.2"
 parking_lot = "0.11.1"
 rand = "0.7.3"
 rayon = "1.5.0"
@@ -77,6 +76,7 @@ obkv = "0.2.0"
 pin-project = "1.0.7"
 whoami = { version = "1.1.2", optional = true }
 reqwest = { version = "0.11.3", features = ["json", "rustls-tls"], default-features = false, optional = true }
+serdeval = "0.1.0"
 
 [dependencies.sentry]
 default-features = false
