--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -49,9 +49,9 @@ itertools = "0.10.0"
 log = "0.4.8"
 main_error = "0.1.0"
 meilisearch-error = { path = "../meilisearch-error" }
-meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", branch = "main" }
+meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
 memmap = "0.7.0"
-milli = { git = "https://github.com/meilisearch/milli.git", branch = "update-tokenizer-0.2.5" }
+milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.10.1" }
 mime = "0.3.16"
 num_cpus = "1.13.0"
 once_cell = "1.5.2"
