--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -27,6 +27,7 @@ once_cell = "1.5.2"
 ordered-float = "2.1.1"
 rayon = "1.5.0"
 roaring = "0.6.6"
+rstar = { version = "0.9.1", features = ["serde"] }
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = { version = "1.0.62", features = ["preserve_order"] }
 slice-group-by = "0.2.6"
