--- a/.github/workflows/cron_benchmarks_search_songs.yml
+++ b/.github/workflows/cron_benchmarks_search_songs.yml
@@ -1,15 +1,11 @@
-name: Benchmarks
+name: Benchmarks search songs
 
 on:
-  workflow_dispatch:
-    inputs:
-      dataset_name:
-        description: 'The name of the dataset used to benchmark (search_songs, search_wiki or indexing)'
-        required: false
-        default: 'search_songs'
+  schedule:
+    - cron: "30 08 * * FRI" # every friday at 08:30
 
 env:
-  BENCH_NAME: ${{ github.event.inputs.dataset_name }}
+  BENCH_NAME: "search_songs"
 
 jobs:
   benchmarks:
