--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -16,6 +16,7 @@ flate2 = "1.0.20"
 fst = "0.4.5"
 fxhash = "0.2.1"
 grenad = { version = "0.3.1", default-features = false, features = ["tempfile"] }
+haversine = "0.2.1"
 heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1", default-features = false, features = ["lmdb", "sync-read-txn"] }
 human_format = "1.0.3"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
