--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -30,5 +30,9 @@ name = "search_wiki"
 harness = false
 
 [[bench]]
+name = "search_geo"
+harness = false
+
+[[bench]]
 name = "indexing"
 harness = false
