--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -24,6 +24,7 @@ levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.4"
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
 memmap = "0.7.0"
+nom = "7"
 obkv = "0.2.0"
 once_cell = "1.5.2"
 ordered-float = "2.1.1"
