--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,7 +33,7 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: check
-        args: --all
+        args: --workspace --all-targets
     - name: Run cargo test
       uses: actions-rs/cargo@v1
       with:
