--- a/meilisearch-lib/Cargo.toml
+++ b/meilisearch-lib/Cargo.toml
@@ -31,7 +31,7 @@ log = "0.4.14"
 meilisearch-error = { path = "../meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
 memmap = "0.7.0"
-milli = { git = "https://github.com/meilisearch/milli.git", rev = "f65153ad6454317213680e9a9a908ec78d5645a7"}
+milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.17.0"}
 mime = "0.3.16"
 num_cpus = "1.13.0"
 once_cell = "1.8.0"
