--- a/http-ui/Cargo.toml
+++ b/http-ui/Cargo.toml
@@ -11,7 +11,7 @@ byte-unit = { version = "4.0.9", default-features = false, features = ["std"] }
 crossbeam-channel = "0.5.0"
 heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
-memmap = "0.7.0"
+memmap2 = "0.5.0"
 milli = { path = "../milli" }
 once_cell = "1.5.2"
 rayon = "1.5.0"
