--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -23,7 +23,7 @@ human_format = "1.0.3"
 levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
 linked-hash-map = "0.5.4"
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
-memmap = "0.7.0"
+memmap2 = "0.5.0"
 obkv = "0.2.0"
 once_cell = "1.5.2"
 ordered-float = "2.1.1"
