Add Milestone Check status to bors.toml

--- a/bors.toml
+++ b/bors.toml
@@ -3,7 +3,8 @@ status = [
     'Tests on macos-latest',
     'Tests on windows-latest',
     'Run Clippy',
-    'Run Rustfmt'
+    'Run Rustfmt',
+    'Milestone Check'
 ]
 # 3 hours timeout
 timeout-sec = 10800
