--- a/bors.toml
+++ b/bors.toml
@@ -3,8 +3,8 @@ status = [
     'Tests on macos-latest',
     'Tests on windows-latest',
     'Run Clippy',
-    'Run Rustfmt',
-    'Milestone Check'
+    'Run Rustfmt'
 ]
+pr_status = ['Milestone Check']
 # 3 hours timeout
 timeout-sec = 10800
