update some names and move some parser out of the lib.rs

--- a/milli/Cargo.toml
+++ b/milli/Cargo.toml
@@ -40,6 +40,7 @@ uuid = { version = "0.8.2", features = ["v4"] }
 
 # facet filter parser
 nom = "7.0.0"
+nom_locate = "4.0.0"
 
 # documents words self-join
 itertools = "0.10.0"
