save the user-id in the config dir of the OS

--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -51,6 +51,7 @@ mime = "0.3.16"
 num_cpus = "1.13.0"
 once_cell = "1.8.0"
 parking_lot = "0.11.2"
+platform-dirs = "0.3.0"
 rand = "0.8.4"
 rayon = "1.5.1"
 regex = "1.5.4"
