--- a/meilisearch-http/Cargo.toml
+++ b/meilisearch-http/Cargo.toml
@@ -47,6 +47,7 @@ log = "0.4.14"
 meilisearch-lib = { path = "../meilisearch-lib" }
 meilisearch-error = { path = "../meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
+meilisearch-tasks = { path = "../meilisearch-tasks" }
 mime = "0.3.16"
 num_cpus = "1.13.0"
 once_cell = "1.8.0"
