--- a/meilisearch-lib/Cargo.toml
+++ b/meilisearch-lib/Cargo.toml
@@ -30,6 +30,7 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 meilisearch-error = { path = "../meilisearch-error" }
 meilisearch-tokenizer = { git = "https://github.com/meilisearch/tokenizer.git", tag = "v0.2.5" }
+meilisearch-tasks = { path = "../meilisearch-tasks" }
 milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.20.0" }
 mime = "0.3.16"
 num_cpus = "1.13.0"
